# aiops-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt  seasonal_gen.py  telemetry.py
azure/: README.md  create-fastburn-alert.ps1  provision-observability.ps1  teardown.ps1
scripts/: load.ps1  start-container.ps1  start.ps1
services/: inventory_service.py  order_service.py  payment_service.py  storefront_service.py
state/: faults.json
storefront/: index.html
